# BrozeAXE-AI

./: .dockerignore  .env.example  .gitignore  .nixpacksignore  ANALYSIS_SUMMARY.md  AUTHENTICATION.md  CLAUDE.md  DROPBOX_SETUP.md  FIX_SUMMARY.md  PERMISSIONS_POLICY.md  Procfile  RAILWAY_GOOGLE_DRIVE_SETUP.md  README.md  SYSTEM_READY.md  TESTING_RESULTS.md  WEB_LOGIN_GUIDE.md  WORKFLOW_TODO.md  app.py  nixpacks.toml  package-lock.json  railway.json  requirements.txt  start.sh  test_auth.py
archaeological-classifier/: .gitignore  ACS_ARCHITECTURAL_ANALYSIS.md  AI_ML_SYSTEM.md  ARCHITECTURE_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTAZIONE_TECNICA_ANALISI_TECNOLOGICA.md  FINAL_INTEGRATION_SUMMARY.md  FIXES_APPLIED_SUMMARY.md  GET_STARTED.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_PROGRESS.md  LAUNCH_WEB.md  LICENSE  MANIFEST.in  MORPHOMETRIC_INVESTIGATION_REPORT.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  SAVIGNANO_AI_INTEGRATION_UPDATE.md  SAVIGNANO_BUGFIXES_2025-11-09.md  SAVIGNANO_COMPREHENSIVE_REPORT_SYSTEM.md  SAVIGNANO_DETAILED_ANNOTATIONS_UPDATE.md  SAVIGNANO_DRAWINGS_UPDATE.md  SAVIGNANO_FINAL_FIXES.md  SAVIGNANO_INTEGRATION_PLAN.md  SAVIGNANO_PDF_MULTILINGUA_READY.md  SAVIGNANO_QUICK_START.md  SAVIGNANO_SYSTEM_GUIDE.md  SAVIGNANO_WEB_INTEGRATION.md  SAVIGNANO_WEB_INTEGRATION_COMPLETE.md  TEST_WEB.md  WEB_INTERFACE.md  WEB_READY.md  acs_artifacts.db  analyze_and_save_savignano.py  analyze_savignano_direct.py  check_pdf_visual.py  generate_report_direct.py  insert_test_features.py  (+16 more)
archaeological-classifier/acs/: __init__.py  cli.py
archaeological-classifier/acs/api/: __init__.py  app.py
archaeological-classifier/acs/core/: __init__.py  ai_assistant.py  auth.py  config.py  database.py  drawing_worker.py  file_validator.py  mesh_processor.py  mesh_renderer.py  ml_classifier.py  morphometric.py  rag_search.py  report_generator.py  resilient_ai.py  similarity_search.py  storage.py  stylistic_analyzer.py  taxonomy.py  technical_drawing.py  technological_analyzer.py
archaeological-classifier/acs/database/: savignano_schema.sql
archaeological-classifier/acs/mcp/: __init__.py  server.py
archaeological-classifier/acs/models/: __init__.py  artifact.py  classification.py
archaeological-classifier/acs/savignano/: __init__.py  archaeological_qa.py  comprehensive_report.py  feature_detector.py  matrix_analyzer.py  morphometric_extractor.py  prompt_formatter.py  render_helpers.py  taxonomy_rules.py  technical_drawings.py
archaeological-classifier/acs/web/: __init__.py  (+1 more)
archaeological-classifier/docs/: AI_ARCHITECTURE.md  COMPLETED_TASKS.md  DOCUMENTATION_INDEX.md  GOOGLE_DRIVE_SETUP.md  GUIDA_AI_PER_ARCHEOLOGI.md  HAMMERING_CASTING_DEBUG.md  PROTECTED_ENDPOINTS.md  RAILWAY_DEPLOYMENT.md  WORKFLOW_GUIDE.md  WORKFLOW_SIMPLE.md
archaeological-classifier/examples/: savignano_analysis.py  savignano_features.json  savignano_statistics.json  savignano_taxonomy.json
archaeological-classifier/tests/: __init__.py  test_taxonomy.py
rust-tutorial/: Cargo.toml  TUTORIAL_RUST.md
rust-tutorial/examples/: cap01_basi.rs  cap02_ownership.rs  cap03_strutture.rs  cap04_errori.rs  cap05_collezioni.rs  cap06_traits.rs  cap07_moduli.rs  cap08_concorrenza.rs  cap09_progetto_finale.rs
rust-tutorial/src/: main.rs
(+45 files in other folders)
